Fix css bug so that highlights are in the right place

--- a/css/main.css
+++ b/css/main.css
@@ -120,6 +120,7 @@ img {
     .transcribe #background {
         height:300px;
         overflow:hidden;
+        padding:0px;
     }
 
     /* Rotate controls */
