--- a/css/main.css
+++ b/css/main.css
@@ -208,42 +208,33 @@ input.slightlysmallerspan2 {
 #guillotine {
     position:absolute;
     display:none;
-    height:60px;
+    height:74px;
     z-index: 2;
 }
     #guillotine-lines {
         position:absolute;
-        top:9px;
+        top:18px;
         width:100%;
         height:43px;
-        border-top:1px solid red;
-        border-bottom:1px solid red;
+        border-top:2px solid red;
+        border-bottom:2px solid red;
     }
-    
-    #guillotine i.ui-resizable-handle {
-        width:14px;
+
+    #topgrip,
+    #bottomgrip {
         height:14px;
     }
 
-    /* Fix jQuery ui's dodgy css positioning */
-    #guillotine i.ui-resizable-nw {
-        left:0px;
+    #topgrip {
         top:0px;
     }
 
-    #guillotine i.ui-resizable-ne {
-        right:0px;
-        top:0px;
-    }
-
-    #guillotine i.ui-resizable-sw {
-        left:0px;
-        bottom:0px;
-    }
-
-    #guillotine i.ui-resizable-se {
-        right:0px;
-        bottom:0px;
+    .gripwrapper {
+        height:18px;
+        width:24px;
+        margin:0 auto;
+        background-color: rgba(255,255,255, 0.85);
+        text-align: center;
     }
 
 a#slice {
@@ -258,6 +249,9 @@ a#slice {
     padding-top:20px;
     color:#333;
 }
+    a#slice i {
+        margin-top:7px;
+    }
 
 #counter {
     position:absolute; 
