--- a/css/main.css
+++ b/css/main.css
@@ -241,6 +241,16 @@ input.slightlysmallerspan2 {
         text-align: center;
     }
 
+    #actual-grip-n,
+    #actual-grip-s {
+        position:absolute;
+        width:100%;
+        height:18px;
+        top:0px;
+        left:0px;
+        z-index:5;
+    }
+
 a#slice {
     display:block;
     width: 100%;
